# fastapi_tutorial_phresh

./: README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/api/: server.py
backend/app/api/dependencies/: cleanings.py  database.py  evaluations.py  offers.py  users.py
backend/app/api/routes/: __init__.py  cleanings.py  evaluations.py  offers.py  profiles.py  users.py
backend/app/core/: config.py  tasks.py
backend/app/db/: tasks.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 6bc9c88e4f17_create_main_tables.py  fcf693f61018_create_main_tables.py
backend/app/db/repositories/: cleanings.py  evaluations.py  offers.py  profiles.py  users.py
backend/app/models/: cleaning.py  core.py  evaluation.py  offer.py  profile.py  token.py  user.py
backend/app/services/: authentication.py
backend/tests/: conftest.py  test_cleanings.py  test_evaluations.py  test_offers.py  test_profiles.py  test_users.py
phresh-frontend/: package-lock.json  package.json
phresh-frontend/src/: index.js
phresh-frontend/src/components/: index.js
phresh-frontend/src/components/App/: App.js
phresh-frontend/src/components/Carousel/: Carousel.js
phresh-frontend/src/components/CarouselTitle/: CarouselTitle.js
phresh-frontend/src/components/CleaningJobCard/: CleaningJobCard.js
phresh-frontend/src/components/CleaningJobCreateForm/: CleaningJobCreateForm.js
phresh-frontend/src/components/CleaningJobEditForm/: CleaningJobEditForm.js
phresh-frontend/src/components/CleaningJobView/: CleaningJobView.js
phresh-frontend/src/components/CleaningJobsHome/: CleaningJobsHome.js
phresh-frontend/src/components/CleaningJobsPage/: CleaningJobsPage.js
phresh-frontend/src/hooks/: useCarousel.js
phresh-frontend/src/redux/: auth.js  cleanings.js  initialState.js  rootReducer.js  store.js
phresh-frontend/src/services/: apiClient.js
phresh-frontend/src/utils/: errors.js  urls.js  validation.js
(+11 files in other folders)
