[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Fazhi Tu <fazhi.tu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.79.0"
uvicorn = "^0.18.2"
pydantic = "^1.9.1"
email-validator = "^1.2.1"
databases = {extras = ["postgresql"], version = "^0.6.0"}
SQLAlchemy = "^1.4.39"
alembic = "^1.8.1"
psycopg2-binary = "^2.9.3"
PyJWT = "^2.4.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}

[tool.poetry.dev-dependencies]
pytest = "^5.4.2"
pytest-asyncio = "^0.12.0"
pytest-xdist = "^1.32.0"
httpx = "^0.12.1"
asgi-lifespan = "^1.0.0"
docker = "^4.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
